Add match set transition verbs (#235) (#240)
